import 'package:get/state_manager.dart';

class NotificationViewModel extends GetxController {}
